[package]
name = "apikeys-rs"
version = "0.1.0"
edition = "2021"
description = "Apikeys-rs is a comprehensive toolkit designed to streamline API key management for your backend services"
readme = "README.md"
license = "MIT"
repository = "https://github.com/iltumio/apikeys-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.76"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
mongodb = "2.8.0"
bson = "2.8.1"
dotenv = "0.15.0"
axum = "0.8.4"
tower = "0.4.11"
http = "1.0.0"
futures-util = "0.3.30"
redis = { version = "0.25.4", features = ["tokio-rustls-comp", "tokio-comp"] }
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.35.0", features = ["full"] }
rusty-hook = "0.11.2"
